--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -189,3 +189,15 @@
   text-align: center;
   padding: 2.5rem;
 }
+
+
+/////////////////////////////
+// GALLERY
+.gallery {
+  display: flex;
+
+  &__photo {
+    width: 100%;
+    display: block;
+  }
+}
